--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/forms": "~8.2.8",
     "@angular/platform-browser": "~8.2.8",
     "@angular/platform-browser-dynamic": "~8.2.8",
+    "@angular/pwa": "^0.803.8",
     "@angular/router": "~8.2.8",
+    "@angular/service-worker": "~8.2.8",
     "bootstrap": "^4.3.1",
     "ngx-bootstrap": "^5.1.2",
     "ngx-bootstrap-slider": "^1.7.0",
