--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/bootstrap-slider/dist/bootstrap-slider.min.js"
+              "node_modules/bootstrap-slider/dist/bootstrap-slider.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
