--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.8",
+    "@angular/cdk": "^8.2.2",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
     "@angular/core": "~8.2.8",
@@ -23,6 +24,7 @@
     "@angular/service-worker": "~8.2.8",
     "bootstrap": "^4.3.1",
     "ngx-bootstrap": "^5.1.2",
+    "ngx-bootstrap-navbar": "0.0.4",
     "ngx-bootstrap-slider": "^1.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
